<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:itemTextAppearance="@style/RobotoTextViewStyle"
    app:startDestination="@+id/nav_dashboard">

    <fragment
        android:id="@+id/nav_dashboard"
        android:name="com.nsoft.laundromat.controller.menu.ui.dashboard.DashboardFragment"
        android:label="@string/menu_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/nav_shop"
        android:name="com.nsoft.laundromat.controller.menu.ui.home.HomeFragment"
        android:label="@string/menu_shop"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_transaction"
        android:name="com.nsoft.laundromat.controller.menu.ui.transactions.TransactionFragment"
        android:label="@string/menu_transaction"
        tools:layout="@layout/fragment_transaction" />

    <fragment
        android:id="@+id/nav_customer"
        android:name="com.nsoft.laundromat.controller.menu.ui.customer.CustomerFragment"
        android:label="@string/menu_customer"
        tools:layout="@layout/fragment_customer" />

    <fragment
        android:id="@+id/nav_stuff"
        android:name="com.nsoft.laundromat.controller.menu.ui.staff.StaffFragment"
        android:label="Staff"
        tools:layout="@layout/fragment_staff" />

    <fragment
        android:id="@+id/nav_product"
        android:name="com.nsoft.laundromat.controller.menu.ui.offer.OfferFragment"
        android:label="Offers"
        tools:layout="@layout/fragment_offer" />

    <fragment
        android:id="@+id/nav_setting"
        android:name="com.nsoft.laundromat.controller.menu.ui.setting.SettingFragment"
        android:label="Settings"
        tools:layout="@layout/fragment_setting" />

    <fragment
        android:id="@+id/nav_report"
        android:name="com.nsoft.laundromat.controller.menu.ui.report.ReportFragment"
        android:label="@string/menu_report"
        tools:layout="@layout/fragment_report" />

<!--    <fragment-->
<!--        android:id="@+id/nav_user_info"-->
<!--        android:name="com.nsoft.laundromat.controller.menu.ui.userinfo.UserInfoFragment"-->
<!--        android:label="@string/menu_user_info"-->
<!--        tools:layout="@layout/fragment_user_info" />-->

    <fragment
        android:id="@+id/nav_logout"
        android:name="com.nsoft.laundromat.controller.menu.ui.logout.LogoutFragment"
        android:label="@string/menu_logout"
        tools:layout="@layout/fragment_logout" />
</navigation>